@@ -1900,6 +1900,13 @@ eod;
 	}
 
 // -------------------------------------------------------------
+
+	function regexp_list($list, $delim = ',')
+	{
+		return join('|', do_list(str_replace('|', '\\\\|', $list), $delim));
+	}
+
+// -------------------------------------------------------------
 	function trace_add($msg)
 	{
 		global $production_status;
